addtl links on product cards + better handling of UI state w/ header dropdowns/search modal + cart page minor visual tweaks

--- a/src/scss/components/_card-product.scss
+++ b/src/scss/components/_card-product.scss
@@ -29,6 +29,14 @@
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
+
+      a {
+        color: $black;
+
+        &:hover {
+          color: $primary !important;
+        }
+      }
     }
 
     p {
