--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -9,6 +9,14 @@
       width: 90%;
       overflow: visible;
     }
+
+    .k-headline a {
+      color: $black;
+
+      &:hover {
+        color: $primary !important;
+      }
+    }
   }
 
   &--intro {
