--- a/src/scss/components/_card-article.scss
+++ b/src/scss/components/_card-article.scss
@@ -35,6 +35,14 @@
 
   &--title {
     margin-bottom: 1.5em;
+
+    a {
+      color: $black;
+
+      &:hover {
+        color: $primary !important;
+      }
+    }
   }
 
   &--excerpt {
