--- a/src/scss/components/_cart-sidebar.scss
+++ b/src/scss/components/_cart-sidebar.scss
@@ -3,37 +3,62 @@
   top: 0;
   right: 0;
   width: 75%;
+  height: 100vh;
   z-index: 101;
+  background: $true-white;
   transform: translateX(
     101%
   ); // the extra 1% solves some translate inconsistencies on some browsers
   transition: transform 0.4s $ease-out-circ;
   border-left: 1px solid #ddd;
+  overflow: hidden;
 
   &--open {
     transform: translateX(0);
+    pointer-events: all;
   }
 
   &__liner {
     position: relative;
-    background: $true-white;
+    padding: 0 1em;
+  }
+
+  &__content {
+    position: relative;
   }
 
   &__actions {
-    position: absolute;
-    bottom: 2em;
-    right: 1em;
-    left: 1em;
-    display: flex;
-    flex-flow: row wrap;
-    text-align: right;
+    position: fixed;
+    bottom: 0;
+    background: $true-white;
+    width: 100%;
+    box-shadow: 0 0 0.25em #dedede;
 
-    a {
+    .k-liner {
+      display: flex;
+      flex-flow: row wrap;
+      position: relative;
+      padding: 2em 1em 8em 1em;
+
+      // &:before {
+      //   pointer-events: none;
+      //   display: block;
+      //   content: '';
+      //   position: absolute;
+      //   top: -100%;
+      //   left: 0;
+      //   width: 100%;
+      //   height: 100%;
+      //   background-image: linear-gradient(to bottom, transparent, $true-white);
+      // }
+    }
+
+    .k-button {
       flex-basis: 100%;
-      color: $primary;
+      padding: 0.5em 0;
 
-      &:hover {
-        color: darken($primary, 15%) !important;
+      &:first-child {
+        margin-bottom: 0.25em;
       }
     }
   }
@@ -66,8 +91,6 @@
   #k-ajaxcart-cartitems {
     position: absolute;
     top: 3em;
-    left: 1em;
-    right: 1em;
     bottom: 6em;
     overflow: scroll;
     padding: 2em 0;
@@ -81,6 +104,10 @@
   &__item {
     padding: 1em 0;
     border-bottom: 1px solid #ddd;
+
+    &:last-child {
+      border-bottom: 0;
+    }
 
     * {
       margin: 0;
@@ -129,12 +156,6 @@
       padding: 0 3em;
     }
 
-    &__actions,
-    #k-ajaxcart-cartitems {
-      left: 2em;
-      right: 2em;
-    }
-
     &__close,
     &__title {
       top: 2em;
@@ -164,13 +185,21 @@
     width: 33%;
 
     &__liner {
-      padding: 0 4em;
+      padding: 0 3em;
     }
 
-    &__actions,
-    #k-ajaxcart-cartitems {
-      left: 3em;
-      right: 3em;
+    &__actions {
+      .k-liner {
+        padding: 2em 3em;
+      }
+
+      .k-button {
+        padding: 1.25em 2em;
+
+        &:first-child {
+          margin-bottom: 0.5em;
+        }
+      }
     }
 
     &__item {
