--- a/src/scss/components/_promo-slider.scss
+++ b/src/scss/components/_promo-slider.scss
@@ -55,6 +55,8 @@
 
   .k-productcard {
     width: 100%;
+    padding-bottom: 2em;
+    bottom: 0 !important;
 
     &--liner {
       padding-right: 1.5em;
