--- a/src/scss/components/_site-header.scss
+++ b/src/scss/components/_site-header.scss
@@ -90,6 +90,51 @@
     }
   }
 
+  &__newsletter-signup {
+    display: none;
+    background: $black;
+
+    form {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      text-align: right;
+      margin-bottom: 0;
+      padding-bottom: 1em;
+    }
+
+    fieldset {
+      flex-basis: 100%;
+      padding: 1em 0;
+      display: inline-block;
+      text-align: left;
+    }
+
+    input {
+      font-style: 140%;
+      display: inline-block;
+      vertical-align: middle;
+      color: $true-white;
+    }
+
+    button {
+      display: inline-block;
+    }
+  }
+
+  &__newsletter-trigger {
+    cursor: pointer;
+    transition: color 0.3s $ease-out-circ;
+
+    &:hover {
+      color: $primary;
+    }
+  }
+
+  &__newsletter-label {
+    color: $true-white;
+  }
+
   &--main {
     background: $true-white;
 
@@ -202,6 +247,20 @@
         display: flex;
         justify-content: space-between;
         padding: 0.75em 0;
+      }
+    }
+
+    &__newsletter-signup {
+      form {
+        flex-direction: row;
+        align-items: center;
+        justify-content: flex-end;
+        padding-bottom: 0;
+
+        fieldset {
+          flex-basis: auto;
+          padding: 1em 0.5em;
+        }
       }
     }
 
