--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -35,6 +35,7 @@
 @import 'components/cart-sidebar';
 @import 'components/koi-process';
 @import 'components/resources-callout';
+@import 'components/newsletter-cta';
 
 @import 'pages/home';
 @import 'pages/blog-listing';
