--- a/src/scss/pages/_all-products.scss
+++ b/src/scss/pages/_all-products.scss
@@ -10,6 +10,14 @@
       flex-basis: 48.5%;
       margin-right: 0.75%;
       margin-bottom: 2em;
+
+      &--title {
+        .k-rte-content {
+          * {
+            color: $accent-text;
+          }
+        }
+      }
     }
   }
 }
