--- a/src/scss/global/_forms.scss
+++ b/src/scss/global/_forms.scss
@@ -125,6 +125,7 @@ form {
   & + label {
     user-select: none;
     pointer-events: none;
+    transition: transform 0.4s $ease-out-circ;
   }
 
   &.has-value,
