ajax cart: Subtotal/bundle pricing

--- a/src/scss/components/_cart-sidebar.scss
+++ b/src/scss/components/_cart-sidebar.scss
@@ -188,9 +188,19 @@
       padding: 0 3em;
     }
 
+    &__summary {
+      h4 {
+        margin: 0.5em 0;
+      }
+    }
+
     &__actions {
       .k-liner {
-        padding: 2em 3em;
+        padding: 1em 3em;
+
+        &:first-of-type {
+          padding: 1em 3em 0;
+        }
       }
 
       .k-button {
