--- a/src/scss/components/_cart-sidebar.scss
+++ b/src/scss/components/_cart-sidebar.scss
@@ -93,7 +93,7 @@
     top: 3em;
     bottom: 6em;
     overflow: scroll;
-    padding: 2em 0;
+    margin: 2em 0;
 
     &::-webkit-scrollbar {
       width: 0px;
