hover state on full card

--- a/src/scss/components/_card-product.scss
+++ b/src/scss/components/_card-product.scss
@@ -86,4 +86,13 @@
       width: 1em;
     }
   }
+  &:hover {
+    h3 > a {
+      color: $primary;
+    }
+    .k-button {
+      color: white;
+      background: $primary;
+    }
+  }
 }
