breadcrumb linl color

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -36,6 +36,7 @@
 @import 'components/koi-process';
 @import 'components/resources-callout';
 @import 'components/newsletter-cta';
+@import "components/breadcrumbs";
 
 @import 'pages/home';
 @import 'pages/blog-listing';
