ajax cart functionality

--- a/src/scss/global/_utils.scss
+++ b/src/scss/global/_utils.scss
@@ -1,3 +1,8 @@
 .k-headerpadding {
   // transition: padding .4s $ease-out-circ;
 }
+
+.fade {
+  opacity: 0;
+  transition: opacity 0.35s $ease-out-circ;
+}
