--- a/src/scss/components/_cart-sidebar.scss
+++ b/src/scss/components/_cart-sidebar.scss
@@ -28,6 +28,10 @@
     position: relative;
   }
 
+  &__subtotal {
+    margin: 0;
+  }
+
   &__actions {
     position: fixed;
     bottom: 0;
@@ -39,19 +43,11 @@
       display: flex;
       flex-flow: row wrap;
       position: relative;
-      padding: 2em 1em 8em 1em;
+      padding: 1em;
 
-      // &:before {
-      //   pointer-events: none;
-      //   display: block;
-      //   content: '';
-      //   position: absolute;
-      //   top: -100%;
-      //   left: 0;
-      //   width: 100%;
-      //   height: 100%;
-      //   background-image: linear-gradient(to bottom, transparent, $true-white);
-      // }
+      &:first-of-type {
+        padding-bottom: 0;
+      }
     }
 
     .k-button {
@@ -61,6 +57,59 @@
       &:first-child {
         margin-bottom: 0.25em;
       }
+    }
+  }
+
+  &__item-actions {
+    display: flex;
+    flex-basis: 100%;
+    align-items: center;
+    justify-content: flex-start;
+    position: relative;
+
+    .k-productform--quantity {
+      width: auto !important;
+      flex-basis: auto !important;
+    }
+
+    input[type='number'] {
+      padding: 0.5em 1em;
+      max-width: 8ch;
+    }
+
+    .k-reduce {
+      position: static;
+      padding: 0 !important;
+      @extend #k-reduce;
+    }
+
+    .k-increase {
+      position: static;
+      padding: 0 !important;
+      @extend #k-increase;
+    }
+
+    .k-bigtext {
+      margin-left: auto;
+    }
+  }
+
+  &__quantity {
+    margin-right: 1em !important;
+  }
+
+  &__item-update {
+    position: absolute;
+    top: 0%;
+    right: 0%;
+    padding: 0.5em;
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.65s $ease-out-circ;
+
+    &--active {
+      opacity: 1;
+      pointer-events: auto;
     }
   }
 
@@ -103,6 +152,7 @@
   }
 
   &__item {
+    font-size: 80%;
     padding: 1em 0;
     border-bottom: 1px solid #ddd;
 
@@ -140,7 +190,7 @@
     }
 
     p {
-      flex-basis: 50%;
+      // flex-basis: 50%;
 
       &:last-child {
         text-align: right;
