--- a/src/scss/pages/_my-account.scss
+++ b/src/scss/pages/_my-account.scss
@@ -114,7 +114,7 @@
   }
   &--main__liner {
 
-    p {
+    .my-dashboard {
       background: $true-white;
       box-shadow: 0 0 10px rgba(0,0,0,.1);
       padding: 2em;
