--- a/src/scss/components/_product-latest-batch.scss
+++ b/src/scss/components/_product-latest-batch.scss
@@ -74,7 +74,7 @@
           font-size: 200%;
           font-weight: 300;
 
-          span {
+          .k-measurement {
             font-size: 0.5em;
             vertical-align: text-top;
           }
@@ -245,7 +245,7 @@
           p {
             font-size: 250%;
 
-            span {
+            .k-measurement {
               font-size: 0.5em;
             }
           }
