--- a/src/scss/pages/_blog-listing.scss
+++ b/src/scss/pages/_blog-listing.scss
@@ -9,9 +9,19 @@
 
   &--filterby {
     position: absolute;
-    top: 3em;
-    right: 5%;
+    top: 5em;
+    right: unset;
+    left: 5%;
     text-align: right;
+  }
+  @media all and (min-width: 600px){
+    &--filterby {
+      position: absolute;
+      top: 3em;
+      right: 5%;
+      left: unset;
+      text-align: right;
+    }
   }
 
   select {
