--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -37,6 +37,7 @@
 @import 'components/resources-callout';
 @import 'components/newsletter-cta';
 @import "components/breadcrumbs";
+@import "components/social-icons";
 
 @import 'pages/home';
 @import 'pages/blog-listing';
