--- a/src/scss/components/_social-icons.scss
+++ b/src/scss/components/_social-icons.scss
@@ -1,21 +1,27 @@
 .social-icons {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  margin-top: 2em;
+  margin-top: 3em;
+  &-row {
+    display: flex;
+  }
   a {
     display: block;
-    margin-right: .75em;
     transition: all .25s ease;
     opacity: .8;
+    width: 2.5em;
+    height: 2.5em;
+    margin-bottom: 1em;
+    margin-right: .75em;
     svg {
-      width: 2em;
-      height: 2em;
+      width: 100%;
+      height: 100%;
       transition: all .25s ease;
     }
     &:hover {
       transform: scale(1.1);
-      opacity: .4;
+      opacity: 1;
+      svg {
+        fill: $primary;
+      }
     }
   }
 }
