reviews sent to hubspot, modal inputs required, product store on product-hero

--- a/src/scss/global/_utils.scss
+++ b/src/scss/global/_utils.scss
@@ -47,3 +47,11 @@
 .k-base-font-size {
   font-size: 100% !important;
 }
+
+.k-display-inline-block {
+  display: inline-block !important;
+}
+
+.k-goldstar--0 {
+  // margin-left: 0.5em !important;
+}
