--- a/src/scss/components/_cart.scss
+++ b/src/scss/components/_cart.scss
@@ -53,8 +53,8 @@
       width: 100%;
       text-align: center;
       font-weight: 500;
-      font-weight: 500;
-      padding: 1.25em 3em;
+      font-size: 150%;
+      padding: 0.5em;
       border: 1px solid $bg-dark;
       border-radius: 0.25em;
       box-shadow: none;
