--- a/src/scss/components/_product-hero.scss
+++ b/src/scss/components/_product-hero.scss
@@ -173,6 +173,13 @@
     }
   }
 
+  &__desc {
+    flex-basis: 100%;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 0.25em;
+  }
+
   &--variantselect {
     position: relative;
     display: block;
@@ -259,8 +266,7 @@
       width: 100%;
       text-align: center;
       font-weight: 500;
-      font-weight: 500;
-      padding: 1.25em 3em;
+      // padding: 1.25em 3em;
       border: 1px solid $bg-dark;
       border-radius: 0.25em;
       box-shadow: none;
@@ -486,7 +492,7 @@
     &--quantity,
     &--submit,
     &--price {
-      margin-top: 2em;
+      margin-top: 0em;
     }
 
     &--quantity {
@@ -500,7 +506,7 @@
 
     &--quantity {
       input[type='number'] {
-        padding: 1.25em 0;
+        // padding: 1.25em 0;
       }
     }
   }
