--- a/src/scss/account/_account.scss
+++ b/src/scss/account/_account.scss
@@ -2,6 +2,8 @@ $alto: #F2F2F2;
 @import "breadcrumbs";
 @import "sidebar";
 @import "list";
+@import "fields";
+
 .account {
   background: $alto;
   padding: 4em 0;
@@ -24,5 +26,19 @@ $alto: #F2F2F2;
   }
   a {
     color: $primary-dark;
+  }
+  .btn {
+    background: $primary-dark;
+    color: white;
+    padding: .75em 1em;
+    display: inline-block;
+    border: none;
+    text-transform: uppercase;
+    max-width: 10em;
+    cursor: pointer;
+    transition: all .25s ease;
+    &:hover {
+      background: hsl(0,0%, 40%);
+    }
   }
 }
