--- a/src/scss/lib/_normalize.scss
+++ b/src/scss/lib/_normalize.scss
@@ -8,6 +8,11 @@
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
 
+*:focus, *:hover, *:visited, *:active {
+  outline: 0 !important;
+  outline: none !important;
+}
+
  html {
   line-height: 1.15; /* 1 */
   -webkit-text-size-adjust: 100%; /* 2 */
