--- a/src/scss/global/_elements.scss
+++ b/src/scss/global/_elements.scss
@@ -21,6 +21,7 @@ body {
   width: 100%;
   height: 100%;
   z-index: -100;
+  background: black;
   opacity: 0;
   transition: opacity 0.4s $ease-out-quart;
   pointer-events: none;
