--- a/src/scss/components/_site-header.scss
+++ b/src/scss/components/_site-header.scss
@@ -115,16 +115,13 @@
     background: $black;
 
     form {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
       text-align: right;
       margin-bottom: 0;
       padding-bottom: 1em;
     }
 
     fieldset {
-      flex-basis: 100%;
+      width: 100%;
       padding: 1em 0;
       display: inline-block;
       text-align: left;
@@ -278,12 +275,14 @@
 
     &__newsletter-signup {
       form {
+        display: flex;
         flex-direction: row;
         align-items: center;
         justify-content: flex-end;
         padding-bottom: 0;
 
         fieldset {
+          width: auto;
           flex-basis: auto;
           padding: 1em 0.5em;
         }
