--- a/src/scss/account/_sidebar.scss
+++ b/src/scss/account/_sidebar.scss
@@ -28,6 +28,9 @@
         margin-right: 1em;
         transition: all .25s ease;
       }
+      &.highlight {
+        color: $primary-dark;
+      }
       &:hover {
         color: $primary-dark !important;
         svg {
