--- a/src/scss/components/_cart-sidebar.scss
+++ b/src/scss/components/_cart-sidebar.scss
@@ -117,9 +117,11 @@
     right: 0%;
     opacity: 0;
     pointer-events: none;
+    visibility: hidden;
     transition: opacity 0.65s $ease-out-circ;
 
     &--active {
+      visibility: visible;
       opacity: 1;
       pointer-events: auto;
     }
