--- a/src/scss/global/_elements.scss
+++ b/src/scss/global/_elements.scss
@@ -1,10 +1,6 @@
-.is-ie11 {
-  #k-backdrop {
-    display: none;
-  }
-}
-main {
+main:focus {
   outline: none;
+  box-shadow: none;
 }
 body {
   &.cart-sidebar-open {
