--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -36,8 +36,8 @@
 @import 'components/koi-process';
 @import 'components/resources-callout';
 @import 'components/newsletter-cta';
-@import "components/breadcrumbs";
-@import "components/social-icons";
+@import 'components/breadcrumbs';
+@import 'components/social-icons';
 
 @import 'pages/home';
 @import 'pages/blog-listing';
@@ -54,4 +54,6 @@
 @import 'pages/location-finder';
 @import 'pages/cart';
 @import 'pages/404';
-@import "account/account";
+@import 'account/account';
+
+@import 'global/IE';
