--- a/src/scss/pages/_my-account.scss
+++ b/src/scss/pages/_my-account.scss
@@ -8,6 +8,7 @@
     background-repeat: no-repeat;
     z-index: 1;
     display: none;
+    background-image: url('../img/generic-beach.jpg');
   }
 
   &__midimg {
