--- a/src/scss/components/_product-reviews.scss
+++ b/src/scss/components/_product-reviews.scss
@@ -14,6 +14,40 @@
       }
     }
   }
+
+  &__pagination {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: space-between;
+    width: 65%;
+    margin: auto;
+    padding: 1em 0;
+
+    li.active {
+      position: relative;
+
+      &:before {
+        display: block;
+        content: '';
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 2em;
+        height: 2em;
+        background: $bg-gray;
+        border-radius: 50%;
+        z-index: -1;
+        transform: translate(-50%, -50%);
+      }
+    }
+
+    a:hover {
+      color: $primary-dark !important;
+      text-decoration: underline;
+    }
+  }
 }
 
 .k-review {
