--- a/src/scss/components/_breadcrumbs.scss
+++ b/src/scss/components/_breadcrumbs.scss
@@ -1,9 +1,27 @@
-.k-breadcrumb {
+.breadcrumbs {
+  font-size: .9em;
+  border-bottom: 1px solid #CCC;
+  &-inside {
+    margin: 0 auto;
+    padding: 0 0 .5em 0;
+    display: flex;
+    align-items: center;
+  }
+  li {
+    list-style: none;
+    margin-right: 1.25em;
+    position: relative;
+    &:not(:last-child) {
+      &:after {
+        position: absolute;
+        left: calc(100% + .5em);
+        top: 50%;
+        transform: translateY(-50%);
+        content: '\203A';
+      }
+    }
+  }
   a {
     color: $primary;
-    position: relative;
-    &:hover {
-      color: $bg-dark !important;
-    }
   }
 }
