view layer & schema

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -48,6 +48,7 @@
 @import 'pages/contact';
 @import 'pages/about-us';
 @import 'pages/all-products';
+@import "pages/single-product";
 @import 'pages/lab-results';
 @import 'pages/thank-you';
 @import 'pages/veteran-signup';
