--- a/src/scss/components/_breadcrumbs.scss
+++ b/src/scss/components/_breadcrumbs.scss
@@ -1,11 +1,15 @@
 .breadcrumbs {
-  font-size: .9em;
+  font-size: .8em;
   border-bottom: 1px solid #CCC;
-  &-inside {
+  opacity: .9;
+  &-links {
     margin: 0 auto;
-    padding: 0 0 .5em 0;
+    padding: 1.5em 0;
     display: flex;
     align-items: center;
+    @media (min-width: $bp-md) {
+      max-width: 84rem;
+    }
   }
   li {
     list-style: none;
@@ -22,6 +26,9 @@
     }
   }
   a {
-    color: $primary;
+    color: $primary-dark;
+    &:hover {
+      color: $bg-dark !important;
+    }
   }
 }
