--- a/src/scss/components/_breadcrumbs.scss
+++ b/src/scss/components/_breadcrumbs.scss
@@ -1,15 +1,12 @@
 .breadcrumbs {
-  font-size: .8em;
-  border-bottom: 1px solid #CCC;
-  opacity: .9;
+  font-size: 0.8em;
+  border-bottom: 1px solid #ccc;
+  opacity: 0.9;
   &-links {
     margin: 0 auto;
     padding: 1.5em 0;
     display: flex;
     align-items: center;
-    @media (min-width: $bp-md) {
-      max-width: 84rem;
-    }
   }
   li {
     list-style: none;
@@ -18,7 +15,7 @@
     &:not(:last-child) {
       &:after {
         position: absolute;
-        left: calc(100% + .5em);
+        left: calc(100% + 0.5em);
         top: 50%;
         transform: translateY(-50%);
         content: '\203A';
