--- a/src/scss/pages/_checkout.scss
+++ b/src/scss/pages/_checkout.scss
@@ -331,7 +331,8 @@
 }
 
 body.page-template-page-checkout {
-  .k-header--nav, .k-header--top {
+  .k-header--nav,
+  .k-header--top {
     display: none !important;
   }
   .k-header--logo {
