--- a/src/scss/components/_breadcrumbs.scss
+++ b/src/scss/components/_breadcrumbs.scss
@@ -12,6 +12,7 @@
     list-style: none;
     margin-right: 1.25em;
     position: relative;
+    line-height: 1;
     &:not(:last-child) {
       &:after {
         position: absolute;
