z-indexing fix on product rec page

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -48,13 +48,14 @@
 @import 'pages/contact';
 @import 'pages/about-us';
 @import 'pages/all-products';
-@import "pages/single-product";
+@import 'pages/single-product';
 @import 'pages/lab-results';
 @import 'pages/thank-you';
 @import 'pages/veteran-signup';
 @import 'pages/location-finder';
 @import 'pages/cart';
 @import 'pages/404';
+@import 'pages/product-rec';
 @import 'account/account';
 
 @import 'global/IE';
