--- a/src/scss/components/_cta-banner.scss
+++ b/src/scss/components/_cta-banner.scss
@@ -1,6 +1,15 @@
 .k-ctabanner {
   position: relative;
-
+  &:before {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: white;
+    z-index: -10;
+    content: '';
+  }
   .k-inner--xl {
     position: relative;
     border-radius: 0.75em;
