--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -6,11 +6,9 @@
     color: $black;
   }
 
-  &--loaded {
-    #{headings()},
-    p {
-      color: $true-white;
-    }
+  #{headings()},
+  p {
+    color: $true-white;
   }
 
   &--bgimg {
@@ -136,4 +134,53 @@
       }
     }
   }
+}
+
+.hero-media {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -100;
+  background: black;
+  &:before {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    content: '';
+    z-index: 2;
+    opacity: .25;
+    background: black;
+  }
+  &-img, &-video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: all .25s ease;
+    z-index: 0;
+    img, video {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+  &-video {
+    z-index: 1;
+    opacity: 0;
+    visibility: hidden;
+    &.active {
+      opacity: 1;
+      visibility: visible;
+    }
+  }
+}
+
+.home-sections {
+  background: white;
 }
