Hero img srcset

--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -182,5 +182,15 @@
 }
 
 .home-sections {
-  background: white;
+  position: relative;
+  &:before {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    content: '';
+    background: white;
+    z-index: -50;
+  }
 }
