--- a/src/scss/components/_site-footer.scss
+++ b/src/scss/components/_site-footer.scss
@@ -1,5 +1,5 @@
 .k-footer {
-  position: relative;;
+  position: relative;
   &--top .k-inner {
     display: flex;
     flex-flow: row wrap;
@@ -16,6 +16,7 @@
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
+    background-color: white;
     z-index: -1;
   }
 
