--- a/src/scss/components/_cta-banner.scss
+++ b/src/scss/components/_cta-banner.scss
@@ -70,7 +70,7 @@
     border-radius: 0.75em;
   }
   .cta-subscribe-bg {
-    background-image: url("../img/lab-results-hero.jpg");
+    background-image: url("../img/email-signup-cta.jpg");
     background-repeat: no-repeat;
   }
   .k-cta--preheading {
