--- a/src/scss/pages/_blog-listing.scss
+++ b/src/scss/pages/_blog-listing.scss
@@ -2,6 +2,54 @@
   .k-articlecard {
     margin-bottom: 3em;
   }
+
+  &__pagination {
+    ul {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      text-align: center;
+    }
+
+    li {
+      position: relative;
+      display: inline-block;
+      margin: 0 1em;
+
+      &.active {
+        a {
+          color: $true-white;
+
+          &:hover {
+            color: $true-white !important;
+
+            &:before {
+              background: $primary-dark;
+            }
+          }
+        }
+
+        &:before {
+          display: block;
+          content: '';
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          height: 2em;
+          width: 2em;
+          background: $primary;
+          z-index: -1;
+          transform: translate(-50%, -50%);
+          border-radius: 50%;
+        }
+      }
+    }
+
+    a {
+      color: $black;
+    }
+  }
 }
 
 .k-blognav {
