--- a/src/scss/components/_product-hero.scss
+++ b/src/scss/components/_product-hero.scss
@@ -283,7 +283,7 @@
       top: 50%;
       right: 1.0125em;
       transform: translateY(-50%);
-      color: #ccc;
+      color: $primary;
     }
   }
 
